--- a/index.html
+++ b/index.html
@@ -15,10 +15,42 @@
     <a href="#">Home</a>
     <a href="#/kampanye">Kampanye</a>
     <a href="#/donasi">Halaman Donasi</a>
+
+
     <a href="#/relawan">Halaman Relawan</a>
     <a href="#/kontak">Tentang & Kontak</a>
 </nav>
 
-<p>hi</p>
+<section id="donasi">
+    <h2>Donasi Pendidikan</h2>
+    <p>
+        Donasi pendidikan bertujuan untuk membantu siswa atau mahasiswa yang kurang mampu agar tetap dapat melanjutkan pendidikan.Bantuan yang diberikan akan digunakan secara tepat dan bertanggung jawab.
+    </p>
+
+    <h3>Tujuan Donasi</h3>
+    <ul>
+        <li>Membantu biaya sekolah dan kuliah</li>
+        <li>Pemberian beasiswa pendidikan</li>
+        <li>Penyediaan alat tulis dan perlengkapan belajar</li>
+    </ul>
+
+    <h3>Metode Donasi</h3>
+    <ul>
+        <li>Bank BCA : 8763937532</li>
+        <li>Bank BRI : 82362426486</li>
+        <li> GOPAY/OVO : 081982625422</li>
+    </ul>
+
+    <h3>Langkah Donasi</h3>
+    <ol>
+    <li> Pilih program donasi pendidikan</li>
+    <li> Lakukan transfer donasi</li>
+    <li> Konfirmasi donasi Anda</li>
+    </ol>
+
+    <p>
+        Terima kasih atas dukungan Anda dalam membantu pendidikan bagi mereka yang membutuhkan.
+    </p>
+</section>
 </body>
 </html>
